--- a/survey-form/form.html
+++ b/survey-form/form.html
@@ -9,23 +9,31 @@
     <body>
         <header>
             <h1 id="title">first music lessons feedback survey form</h1>
-            <p>Please, let us know what a little bit about your experience with the course</p>
+            <p>Please, let us know a little bit about your experience with the course</p>
         </header>
         <main>
             <form id="survey-form">
                 <div class="form-group">
-                    <label id="email-label" for="name">name: <input id="name" type="text" placeholder="Your name here">
+                    <label id="name-label" for="name">name 
+                        <br>
+                        <input id="name" type="text" placeholder="Your name here">
                     </label>
                     <br>
-                    <label id="email-label" for="email">email: <input id="email" type="text" placeholder="email here">
+                    <label id="email-label" for="email">email
+                        <br>
+                        <input id="email" type="text" placeholder="email here">
                     </label>
                     <br>
-                    <label id="number-label" for="number">How long did you take to finish the course? <input id="number" type="number" min="1" max="12" placeholder="months"></label>
+                    <label id="number-label" for="number">How long did you take to finish the course? 
+                        <br>
+                        <input id="number" type="number" min="1" max="12" placeholder="months"></label>
                 </div>
-                <div class="form-group">
-                    <p>Who was your teacher?</p>
+                <div>
+                <div>
+                    <p id="list-title">Who was your teacher?</p>
+                </div>
                     <select name="teacher" id="dropdown">
-                        <option disabled selected value>Select your teacher</option>
+                        <option id="grey" disabled selected value>Select your teacher</option>
                         <option value="mark">Mark</option>
                         <option value="mariah">Mariah</option>
                         <option value="john">John</option>
@@ -33,64 +41,65 @@
                         <option value="darlene">Darlene</option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <p name="instrument">What instrument did you learn?</p>
-                    <label for="acoustic">Acoustic guitar
+                <br>
+                <div>
+                    <p id="list-title">What instrument did you learn?</p>
+                </div>
+                <br>
+                <div id="list-instruments">
+                    <label class="inst-options"  for="acoustic">
                         <input id="acoustic" value="acoustic guitar" type="radio" name="instrument">
+                        <img class="icons" src="/survey-form/img/guitar.png" alt="acoustic guitar">
                     </label>
                     <br>
-                    <label for="electric">Electric guitar
+                    <label class="inst-options" for="electric">
                         <input id="electric" value="electric guitar" type="radio" name="instrument">
+                        <img class="icons" src="/survey-form/img/electric-guitar.png" alt="electric guitar">  
                     </label>
                     <br>
-                    <label for="keyboard">Keyboard
+                    <label class="inst-options" for="keyboard">
                         <input id="keyboard" value="keyboard" type="radio" name="instrument">
+                        <img class="icons" src="/survey-form/img/keyboard.png" alt="keyboard">
                     </label>
                     <br>
-                    <label for="drums">Drums
-                        <input id="drums" value="drums" type="radio" name="instrument">
-                    </label>
-                    <br>
-                    <label for="bass">Bass
+                    <label class="inst-options" for="bass">
                         <input id="bass" value="bass" type="radio" name="instrument">
+                        <img class="icons" src="/survey-form/img/bass-guitar.png" alt="bass">
                     </label>
                 </div>
-                <br>
-                <div class="form-group">
-                    <p>What were your favourite lessons?</p>
-                <label for="theory">Introduction to music theory
-                    <input id="theory" value="theory" type="checkbox" name="lessons">
-                </label>
-                <br>
-                <label for="notes">Notes on the instrument
-                    <input id="notes" value="notes" type="checkbox" name="lessons">
-                </label>
-                <br>
-                <label for="scales">Major and minor scales
-                    <input id="scales" type="checkbox" value="scales" name="lessons">
-                </label>
-                <br>
-                <label for="chords">How to form chords
-                    <input id="chords" value="chords"  type="checkbox" name="lessons">
-                </label>
-                <br>
-                <label for="metronome">playing on the right tempo with metronome
-                    <input id="metronome" value="metronome" type="checkbox" name="lessons">
-                </label>
-                <br>
-                <label for="practice">Tips on how to practice more effeciently
-                    <input id="practice" value="practice" type="checkbox" name="lessons">
-                </label>
+                <div>
+                    <p id="list-title">What were your favourite lessons?</p>
                 </div>
-                <br>
-                <br>
-                <div class="form-group">
-                    <label for="textarea">Tell was a lit bit about your experience with the course. What was the most challenging lesson for you? 
-                        <br>
-                        <input id="textarea-label" type="textarea" placeholder="" required>
+                <div class="lessons">
+                    <label for="theory">
+                        <input id="theory" value="theory" type="checkbox" name="lessons"> Introduction to music theory
                     </label>
                     <br>
-                    <input type="submit">
+                    <label for="notes">
+                        <input id="notes" value="notes" type="checkbox" name="lessons"> Notes on the instrument
+                    </label>
+                    <br>
+                    <label for="scales">
+                        <input id="scales" type="checkbox" value="scales" name="lessons"> Major and minor scales
+                    </label>
+                    <br>
+                    <label for="chords">
+                        <input id="chords" value="chords"  type="checkbox" name="lessons"> How to form chords
+                    </label>
+                    <br>
+                    <label for="practice">
+                        <input id="practice" value="practice" type="checkbox" name="lessons"> Tips on how to practice more effeciently
+                    </label>
+                </div>
+                <br>
+                <br>
+                <div class="form-group">
+                    <label id="text-label" for="textarea">Tell was a lit bit about your experience with the course. What was the most challenging lesson for you? What should we improve?
+                        <br>
+                        <textarea name="textarea" id="textarea-input" cols="80" rows="10" placeholder="Tell your experience here..." ></textarea>
+                    </label>
+                    <br>
+                    <input id="submit" type="submit">
                 </div>
             </form>
 
